kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turbloggen-deployment
  labels:
    app: turbloggen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turbloggen
  template:
    metadata:
      labels:
        app: turbloggen
    spec:
      containers:
      - name: turbloggen
        image: ghcr.io/pettermk/turbloggen:0.1.0
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: turbloggen-service
spec:
  selector:
    app: turbloggen
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
