kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turbloggen-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - turer.kvalvaag.org
    secretName: kvalvaag-tech-tls
  rules:
    - host: turer.kvalvaag.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: turbloggen-service
              port:
                number: 8080
